--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -119,6 +119,11 @@ button:active, .button:active {
   scale: 0.95;
 }
 
+svg {
+  width: 100%;
+  height: 100%;
+}
+
 
 .container {
   padding: 0 1rem;
