--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -210,10 +210,11 @@ svg {
 }
 
 // .disjkstra {
+//   height: calc(100vh - var(--header-height));
 // }
 
 .dijkstraStage {
-  height: calc(100vh - var(--header-height));
+  // height: calc(100vh - var(--header-height));
   // padding: 1rem;
   background-color: var(--input-color);
   display: grid;
@@ -237,6 +238,8 @@ svg {
 // }
 
 .visualize {
+  margin: var(--header-height) 0 0 0;
+  height: calc(100vh - var(--header-height));
   display: grid;
   grid-template-columns: 8fr 2fr;
 }
@@ -246,13 +249,14 @@ svg {
   flex-direction: column;
   padding: 1rem 0.5rem;
   row-gap: 1rem;
+  overflow-y: scroll;
 }
 
 .configurator input {
   padding: 0.5rem;
 }
 
-.createGraphForm, .startAndEndForm {
+.createGraphForm, .startAndEndForm, .createListForm, .findNumberForm {
   display: flex;
   flex-direction: column;
   row-gap: 0.5rem;
@@ -263,4 +267,33 @@ svg {
   font-weight: var(--font-medium);
   color: black;
   margin-bottom: -0.4rem;
+}
+
+.dsList {
+  margin: var(--header-height) 0 0 0;
+  // height: calc(100vh - var(--header-height));
+  display: flex;
+  padding: 1rem;
+  column-gap: 1rem;
+}
+
+.binarySearchStage {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  align-items: center;
+}
+
+// .binaryItem {
+// }
+
+.binaryNode {
+  background-color: var(--first-color);
+  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
