--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -110,19 +110,63 @@ button, .button {
   border-radius: 1em;
   padding: 1em;
   transition: 0.05s;
-  display: inline-block;
+  // display: inline-block;
   cursor: pointer;
   background-color: var(--first-color);
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 0.5rem;
 }
+
+// .button-text {
+//   min-width: 1rem;
+// }
 
 button:active, .button:active {
   scale: 0.95;
 }
 
+.button-outline {
+  border: 0.1rem solid var(--first-color);
+  background-color: transparent;
+  color: var(--first-color);
+  // min-width: 10rem;
+}
+
+.button-outline:hover {
+  background-color: var(--first-color);
+  color: white;
+}
+
 svg {
   width: 100%;
   height: 100%;
+  // transition: fill 0.5s;
+}
+
+circle {
+  transition: fill 0.7s;
+}
+
+line {
+  transition: stroke 0.7s;
+}
+
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: var(--scroll-bar-color);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-thumb-color);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--text-color-light);
 }
 
 
@@ -217,6 +261,7 @@ svg {
   // height: calc(100vh - var(--header-height));
   // padding: 1rem;
   background-color: var(--input-color);
+  min-height: 100%;
   display: grid;
   // gap: 0.005rem;
   place-items: center;
@@ -242,6 +287,25 @@ svg {
   height: calc(100vh - var(--header-height));
   display: grid;
   grid-template-columns: 8fr 2fr;
+  align-items: stretch;
+}
+
+.info {
+  display: flex;
+  column-gap: 1rem;
+  align-items: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: var(--input-color);
+}
+
+.icon {
+  width: 1rem;
+  height: 1rem;
+}
+
+.title {
+  font-size: var(--h3-font-size)
 }
 
 .configurator {
@@ -284,8 +348,11 @@ svg {
   align-items: center;
 }
 
-// .binaryItem {
-// }
+.binaryItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .binaryNode {
   background-color: var(--first-color);
@@ -296,4 +363,47 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.binaryNode, .itemIdx, .marker {
+  transition: 5s ease-in-out;
+}
+
+.marker {
+  display: none;
+}
+
+.showMarker {
+  display: block;
+}
+
+.tutorialText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 30rem;
+  padding: 1rem 1rem;
+  row-gap: 2rem;
+  box-shadow: 0px 0px 50rem rgba($color: #8f8e8e, $alpha: 0.5);
+  max-height: calc(100vh - 10rem);
+  margin: calc(var(--header-height) + 2rem) auto 2rem;
+
+  &__text {
+    overflow-y: scroll;
+  }
+}
+
+.skipTutorial {
+
+}
+
+.tutorialVideo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - var(--header-height));
+  box-shadow: 0px 0px 50rem rgba($color: #8f8e8e, $alpha: 0.5);
+  row-gap: 2rem;
 }
