--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,6 +8,7 @@
 
 :root {
   --header-height: 4rem;
+  --dsItem-width: 20rem;
 
   /* --hue-color: 340; */
   /* --hue-color: 125; */
@@ -77,12 +78,17 @@ html {
 }
 
 body {
-  margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  // height: calc(100vh - var(--header-height));
+  // overflow: hidden;
+}
+
+#root {
+  margin: var(--header-height) 0 0 0;
+  height: calc(100vh - var(--header-height));
+  // overflow: hidden;
 }
 
 h1,
@@ -123,6 +129,14 @@ button,
   align-items: center;
   justify-content: space-between;
   column-gap: 0.5rem;
+
+  &__completed {
+    background-color: darkgreen;
+  }
+
+  &__incompleted {
+    background-color: gray;
+  }
 }
 
 // .button-text {
@@ -203,6 +217,7 @@ line {
   text-transform: uppercase;
   font-size: var(--h2-font-size);
   font-weight: var(--font-semi-bold);
+  z-index: 100;
 
   &__logo {
     display: flex;
@@ -265,18 +280,26 @@ line {
   background-color: var(--input-color);
 }
 
-// .disjkstra {
-//   height: calc(100vh - var(--header-height));
-// }
+.disjkstra {
+  // margin: var(--header-height) 0 0 0;
+  height: calc(100vh - var(--header-height));
+}
+
+.stageAndInfo {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
 .dijkstraStage {
   // height: calc(100vh - var(--header-height));
   // padding: 1rem;
   background-color: var(--input-color);
-  min-height: 100%;
-  display: grid;
+  height: 100%;
+  // min-height: 100%;
+  // display: grid;
   // gap: 0.005rem;
-  place-items: center;
+  // place-items: center;
 }
 
 // .node {
@@ -295,12 +318,13 @@ line {
 // }
 
 .visualize {
-  margin: var(--header-height) 0 0 0;
-  height: calc(100vh - var(--header-height));
+  // margin: var(--header-height) 0 0 0;
+  // height: calc(100vh - var(--header-height));
   display: grid;
   grid-template-columns: 8fr 2fr;
   align-items: stretch;
   position: relative;
+  height: 100%;
 }
 
 #binaryInfos {
@@ -368,9 +392,75 @@ line {
 .dsList {
   margin: var(--header-height) 0 0 0;
   // height: calc(100vh - var(--header-height));
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding-top: 2rem;
+  // column-gap: 1rem;
+  row-gap: 1.5rem;
+  justify-content: space-between;
+}
+
+.dsItem {
+  box-shadow: 0px 0px 5px rgba($color: #cecdcd, $alpha: 1);
   display: flex;
-  padding: 1rem;
-  column-gap: 1rem;
+  flex-direction: column;
+  background-color: var(--input-color);
+  // row-gap: 1rem;
+  width: var(--dsItem-width);
+  transition: 0.1s;
+  align-items: stretch;
+  position: relative;
+  overflow: hidden;
+
+  &:hover {
+    transform: scale(1.01);
+
+    .dsItem__image {
+      transform: scale(1);
+    }
+  }
+
+  &__image {
+    height: 8rem;
+    object-fit: cover;
+    transform: scale(1.1);
+    transition: 0.3s;
+  }
+
+  &__body {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 0.5rem;
+  }
+
+  &__title {
+    font-size: var(--h3-font-size);
+    color: var(--title-color);
+  }
+
+  &__button {
+    padding: 0.3em 0.7em;
+    border-radius: 0.3em;
+  }
+
+  .completed {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 10;
+    background-color: white;
+    border-radius: 50%;
+  }
+
+  .incompleted {
+    display: none;
+  }
+}
+
+.binarySearch {
+  height: calc(100vh - var(--header-height));
 }
 
 .binarySearchStage {
@@ -482,4 +572,18 @@ line {
   align-items: center;
   justify-content: center;
   width: 100%;
+}
+
+.logout {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - var(--header-height));
+
+  &__confirmation {
+    display: flex;
+    column-gap: 3rem;
+  }
 }
