--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,7 +8,7 @@
 
 :root {
   --header-height: 4rem;
-  --dsItem-width: 20rem;
+  --dsItem-width: 30rem;
 
   /* --hue-color: 340; */
   /* --hue-color: 125; */
@@ -114,9 +114,17 @@ img {
   height: auto;
 }
 
+input {
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  border: none;
+  outline: none;
+  background-color: var(--input-color);
+}
+
 button,
 .button {
-  border: none;
+  border: hidden;
   outline: none;
   border-radius: 1em;
   padding: 1em;
@@ -148,6 +156,13 @@ button:active,
   scale: 0.95;
 }
 
+button:hover,
+.button:hover {
+  border: 0.1rem solid var(--first-color);
+  background-color: transparent;
+  color: var(--first-color);
+}
+
 .button-outline {
   border: 0.1rem solid var(--first-color);
   background-color: transparent;
@@ -165,6 +180,11 @@ button:active,
   color: var(--text-color);
   display: inline-block;
   padding: 0;
+}
+
+.toggler {
+  font-size: var(--small-font-size);
+  color: var(--title-color);
 }
 
 svg {
@@ -280,7 +300,8 @@ line {
   background-color: var(--input-color);
 }
 
-.disjkstra {
+.disjkstra,
+.bubbleSort {
   // margin: var(--header-height) 0 0 0;
   height: calc(100vh - var(--header-height));
 }
@@ -369,14 +390,12 @@ line {
   overflow-y: scroll;
 }
 
-.configurator input {
-  padding: 0.5rem;
-}
-
 .createGraphForm,
 .startAndEndForm,
 .createListForm,
-.findNumberForm {
+.findNumberForm,
+.createBubbleSortForm,
+.startBubbleSortForm {
   display: flex;
   flex-direction: column;
   row-gap: 0.5rem;
@@ -385,29 +404,60 @@ line {
 .formlabel {
   font-size: var(--smaller-font-size);
   font-weight: var(--font-medium);
-  color: black;
+  // color: black;
+  color: var(--title-color);
   margin-bottom: -0.4rem;
 }
 
+.disListPage {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background: linear-gradient(-45deg, #ee7752, #23a6d5, #23d5ab, #92f892);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  // height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.carousel-arrow:hover {
+  border: none;
+}
+
 .dsList {
-  margin: var(--header-height) 0 0 0;
+  // margin: var(--header-height) 0 0 0;
   // height: calc(100vh - var(--header-height));
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  padding-top: 2rem;
+  width: 100%;
+  // display: grid;
+  // grid-template-columns: repeat(3, 1fr);
+  // padding-top: 2rem;
   // column-gap: 1rem;
-  row-gap: 1.5rem;
-  justify-content: space-between;
+  // row-gap: 1.5rem;
+  // justify-content: space-between;
 }
 
 .dsItem {
-  box-shadow: 0px 0px 5px rgba($color: #cecdcd, $alpha: 1);
+  box-shadow: 0.5px 0.5px 2px rgba($color: #cecdcd, $alpha: 1),
+    -0.5px -0.5px 2px rgba($color: #cecdcd, $alpha: 1);
   display: flex;
   flex-direction: column;
   background-color: var(--input-color);
   // row-gap: 1rem;
   width: var(--dsItem-width);
-  transition: 0.1s;
+  // transition: 0.1s;
   align-items: stretch;
   position: relative;
   overflow: hidden;
@@ -421,7 +471,7 @@ line {
   }
 
   &__image {
-    height: 8rem;
+    height: 13rem;
     object-fit: cover;
     transform: scale(1.1);
     transition: 0.3s;
@@ -551,13 +601,35 @@ line {
 }
 
 .signIn,
-.signUp {
+.signUp,
+.logout__confirmation {
   display: flex;
   flex-direction: column;
-  padding: 1rem 0.5rem;
-  row-gap: 1rem;
+  padding: 3rem 4rem;
+  row-gap: 2rem;
   width: 400px;
-  align-items: center;
+  // align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 400rem rgba($color: #000000, $alpha: 0.3);
+  border-radius: 1rem;
+
+  .form {
+    row-gap: 1rem;
+  }
+
+  .formTitle {
+    color: var(--title-color);
+    font-size: var(--h2-font-size);
+  }
+}
+
+.logout {
+  height: calc(100vh - var(--header-height));
+}
+
+.logout__confirmation .yesOrNo {
+  display: flex;
+  column-gap: 2rem;
 }
 
 .signIn .button,
@@ -567,23 +639,67 @@ line {
   align-items: center;
 }
 
-.signInPage {
+.signInPage,
+.logout {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
 }
 
-.logout {
-  display: flex;
-  flex-direction: column;
-  row-gap: 2rem;
-  justify-content: center;
-  align-items: center;
-  height: calc(100vh - var(--header-height));
+.logout__title {
+  font-size: var(--h2-font-size);
+  color: var(--title-color);
+}
 
-  &__confirmation {
-    display: flex;
-    column-gap: 3rem;
+.bubbleSortStage {
+  background-color: var(--input-color);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .bubbleNodes {
+    // display: flex;
+    // column-gap: 0.8rem;
+    position: relative;
   }
+
+  .bubbleSortNode {
+    // width: 2.5rem;
+    // height: 2.5rem;
+    background-color: var(--first-color);
+    border: 0.2px solid black;
+    box-shadow: 0px 0px 0.3px rgba($color: #000000, $alpha: 0.3);
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    transition: 0.7s;
+
+    &__text {
+      color: white;
+    }
+
+    .bubbleSortNodeIdx {
+      color: white;
+    }
+  }
+
+  .checking {
+    background-color: green;
+  }
+
+  .swapping {
+    background-color: yellow;
+    .bubbleSortNode__text {
+      color: black;
+    }
+  }
+}
+
+.slider {
+  width: 100%;
 }
